[package]
name        = "cwd"
version     = "1.1.4"
description = "Current Working Directory, a convenience crate"
authors     = ["Alfie John <alfie@alfie.wtf>"]

documentation = "https://docs.rs/cwd/"
homepage      = "https://crates.io/crates/cwd"
repository    = "https://github.com/alfiedotwtf/cwd"
readme        = "README.md"
license       = "GPL-2.0-only"
edition       = "2018"
