[package]
name        = "cwd"
version     = "1.1.6"
description = "Current Working Directory, a convenience crate"
authors     = ["Alfie John <alfie@alfie.wtf>"]

documentation = "https://docs.rs/cwd/"
homepage      = "https://crates.io/crates/cwd"
repository    = "https://github.com/alfiedotwtf/cwd"
readme        = "README.md"
license       = "0BSD"
edition       = "2018"
